--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8080
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/discordbot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=springuser
-spring.datasource.password=springuser
+spring.datasource.username=mel
+spring.datasource.password=36177436
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
