--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=5050
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/discordbot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=mel
@@ -12,3 +12,10 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+logging.level.tech.goodquestion = TRACE
+logging.file.name=gq.log
+logging.logback.rollingpolicy.file-name-pattern=MyApp-%d{yyyy-MM-dd}.%i.log
+
+
+
