added topic api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,8 @@ logging.level.tech.goodquestion = TRACE
 logging.file.name=gq.log
 logging.logback.rollingpolicy.file-name-pattern=MyApp-%d{yyyy-MM-dd}.%i.log
 
+elasticsearch.url=localhost:9200
+spring.main.allow-bean-definition-overriding=true
+
 
 
