added elasticsearch config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 logging.level.tech.goodquestion = TRACE
 logging.file.name=gq.log
-logging.logback.rollingpolicy.file-name-pattern=MyApp-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.file-name-pattern=gq-%d{yyyy-MM-dd}.%i.log
 
 elasticsearch.url=localhost:9200
 spring.main.allow-bean-definition-overriding=true
