--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
-logging.level.tech.goodquestion = TRACE
+logging.level.tech.goodquestion = INFO
 logging.file.name=gq.log
 logging.logback.rollingpolicy.file-name-pattern=gq-%d{yyyy-MM-dd}.%i.log
 
