--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=5050
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/discord?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/discordbot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=mel
-spring.datasource.password=36177436
+spring.datasource.password=36177436leM
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
